chore: bring back coveralls (#655)
* chore: bring back coveralls

* Update circle.yml

--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,7 @@ machine:
 
 test:
   post:
-    - npm run coverage -- --upload
+    - npm run coverage -- --upload --providers coveralls
 
 dependencies:
   pre:
